# monoreposimple

./: .gitignore  azure-pipeline_combined.yml  azure-pipelines.yml  azure-pipelines_proj1.yml  azure-pipelines_proj2.yml  launch_mcp_server.ps1  launch_mcp_server.sh  launch_mcp_server_https.ps1  launch_mcp_server_woToken.ps1  mainpowershell.ps1  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
proj1/: helloworld1.py
proj1/tests/: test_helloworld1.py
proj2/: helloworld2.py
proj2/tests/: test_helloworld2.py
proj3/: helloworld3.py
proj3/tests/: test_helloworld3.py
